--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
     display: block;
     cursor: pointer;
 }
+        .sortable-ghost {
+    opacity: 0.4;
+    background: var(--oro) !important;
+}
+
+.handle {
+    user-select: none;
+    -webkit-user-select: none;
+}
     </style>
 </head>
 <body>
@@ -322,6 +331,10 @@
 // --- LÓGICA DE REGLAMENTO CON DRAG & DROP ---
 let reglasCache = [];
 
+// --- LÓGICA DE REGLAMENTO CON FIX PARA MÓVIL ---
+let reglasCache = [];
+let sortableInstance = null; // Guardamos la instancia aquí
+
 onValue(ref(db, 'reglamento'), (snap) => {
     const data = snap.val();
     const div = document.getElementById('lista-reglamento');
@@ -333,38 +346,50 @@ onValue(ref(db, 'reglamento'), (snap) => {
 
     reglasCache.forEach((regla, index) => {
         const esAdmin = obtenerAcceso();
-        div.innerHTML += `
-            <div class="regla-item" data-id="${regla.id}" style="display:flex; align-items:center; background:rgba(255,255,255,0.05); margin-bottom:8px; padding:12px; border-radius:8px; border-left: 3px solid var(--oro);">
-                <div style="flex-grow:1;">
-                    <span class="indice-regla" style="color:var(--oro); font-weight:bold; margin-right:8px;">${index + 1}.</span> 
-                    <span ${esAdmin ? `contenteditable="true" onblur="actualizarRegla('${regla.id}', 'texto', this.innerText)"` : ''} style="outline:none;">${regla.texto}</span>
-                </div>
-                <div style="display:flex; align-items:center; gap:10px;">
-                    <span style="background:rgba(255,204,0,0.2); color:var(--oro); padding:2px 8px; border-radius:5px; font-weight:bold;">
-                        +<span ${esAdmin ? `contenteditable="true" onblur="actualizarRegla('${regla.id}', 'puntos', this.innerText)"` : ''}>${regla.puntos}</span>
-                    </span>
-                    ${esAdmin ? `
-                        <button onclick="borrarRegla('${regla.id}')" style="color:#ff4444; background:none; border:none; cursor:pointer; font-size:1.2em;">✕</button>
-                        <div class="handle" style="cursor:grab; font-size:1.5em; color:var(--oro); margin-left:5px; padding:0 5px;">☰</div>
-                    ` : ''}
-                </div>
+        const item = document.createElement('div');
+        item.className = 'regla-item';
+        item.setAttribute('data-id', regla.id);
+        item.style = `display:flex; align-items:center; background:rgba(255,255,255,0.05); margin-bottom:8px; padding:12px; border-radius:8px; border-left: 3px solid var(--oro);`;
+
+        item.innerHTML = `
+            <div style="flex-grow:1;">
+                <span class="indice-regla" style="color:var(--oro); font-weight:bold; margin-right:8px;">${index + 1}.</span> 
+                <span ${esAdmin ? `contenteditable="true" onblur="actualizarRegla('${regla.id}', 'texto', this.innerText)"` : ''} style="outline:none;">${regla.texto}</span>
+            </div>
+            <div style="display:flex; align-items:center; gap:10px;">
+                <span style="background:rgba(255,204,0,0.2); color:var(--oro); padding:2px 8px; border-radius:5px; font-weight:bold;">
+                    +<span ${esAdmin ? `contenteditable="true" onblur="actualizarRegla('${regla.id}', 'puntos', this.innerText)"` : ''}>${regla.puntos}</span>
+                </span>
+                ${esAdmin ? `
+                    <button onclick="borrarRegla('${regla.id}')" style="color:#ff4444; background:none; border:none; cursor:pointer; font-size:1.2em;">✕</button>
+                    <div class="handle" style="cursor:grab; font-size:1.5em; color:var(--oro); margin-left:5px; padding:10px; touch-action:none;">☰</div>
+                ` : ''}
             </div>`;
+        div.appendChild(item);
     });
 
-    // Si es admin, activamos el poder de mover
+    // Destruimos la instancia previa si existe para evitar conflictos
+    if (sortableInstance) sortableInstance.destroy();
+
     if (obtenerAcceso()) {
-        Sortable.create(div, {
-            handle: '.handle', // Solo se mueve si tocan las tres rayitas
+        sortableInstance = new Sortable(div, {
+            handle: '.handle',
             animation: 150,
-            onEnd: async () => {
+            ghostClass: 'sortable-ghost', // Clase para el efecto visual
+            forceFallback: true, // Esto ayuda mucho en móviles
+            fallbackOnBody: true,
+            onEnd: async (evt) => {
+                // Obtenemos todos los elementos en el NUEVO orden visual
                 const items = div.querySelectorAll('.regla-item');
                 const updates = {};
+                
                 items.forEach((el, index) => {
                     const id = el.getAttribute('data-id');
                     updates[`reglamento/${id}/orden`] = index;
                 });
+
+                // Mandamos la actualización masiva a Firebase
                 await update(ref(db), updates);
-                // No hace falta alert, Firebase actualiza solo el resto
             }
         });
     }
