--- a/index.html
+++ b/index.html
@@ -328,103 +328,95 @@
         };
 
         // --- REGLAMENTO ---
-// --- LÓGICA DE REGLAMENTO CON DRAG & DROP ---
-let reglasCache = [];
+// --- REGLAMENTO (CORREGIDO) ---
+        let reglasCache = [];
+        let sortableInstance = null;
 
-// --- LÓGICA DE REGLAMENTO CON FIX PARA MÓVIL ---
-let reglasCache = [];
-let sortableInstance = null; // Guardamos la instancia aquí
+        onValue(ref(db, 'reglamento'), (snap) => {
+            const data = snap.val();
+            const div = document.getElementById('lista-reglamento');
+            if (!div) return;
+            div.innerHTML = '';
+            if (!data) return;
 
-onValue(ref(db, 'reglamento'), (snap) => {
-    const data = snap.val();
-    const div = document.getElementById('lista-reglamento');
-    div.innerHTML = '';
-    if (!data) return;
+            reglasCache = Object.entries(data).map(([id, val]) => ({ id, ...val }));
+            reglasCache.sort((a, b) => a.orden - b.orden);
 
-    reglasCache = Object.entries(data).map(([id, val]) => ({ id, ...val }));
-    reglasCache.sort((a, b) => a.orden - b.orden);
+            reglasCache.forEach((regla, index) => {
+                const esAdmin = obtenerAcceso();
+                const item = document.createElement('div');
+                item.className = 'regla-item';
+                item.setAttribute('data-id', regla.id);
+                item.style = `display:flex; align-items:center; background:rgba(255,255,255,0.05); margin-bottom:8px; padding:12px; border-radius:8px; border-left: 3px solid var(--oro);`;
 
-    reglasCache.forEach((regla, index) => {
-        const esAdmin = obtenerAcceso();
-        const item = document.createElement('div');
-        item.className = 'regla-item';
-        item.setAttribute('data-id', regla.id);
-        item.style = `display:flex; align-items:center; background:rgba(255,255,255,0.05); margin-bottom:8px; padding:12px; border-radius:8px; border-left: 3px solid var(--oro);`;
+                item.innerHTML = `
+                    <div style="flex-grow:1;">
+                        <span class="indice-regla" style="color:var(--oro); font-weight:bold; margin-right:8px;">${index + 1}.</span> 
+                        <span ${esAdmin ? `contenteditable="true" onblur="actualizarRegla('${regla.id}', 'texto', this.innerText)"` : ''} style="outline:none;">${regla.texto}</span>
+                    </div>
+                    <div style="display:flex; align-items:center; gap:10px;">
+                        <span style="background:rgba(255,204,0,0.2); color:var(--oro); padding:2px 8px; border-radius:5px; font-weight:bold;">
+                            +<span ${esAdmin ? `contenteditable="true" onblur="actualizarRegla('${regla.id}', 'puntos', this.innerText)"` : ''}>${regla.puntos}</span>
+                        </span>
+                        ${esAdmin ? `
+                            <button onclick="borrarRegla('${regla.id}')" style="color:#ff4444; background:none; border:none; cursor:pointer; font-size:1.2em;">✕</button>
+                            <div class="handle" style="cursor:grab; font-size:1.5em; color:var(--oro); margin-left:5px; padding:10px; touch-action:none;">☰</div>
+                        ` : ''}
+                    </div>`;
+                div.appendChild(item);
+            });
 
-        item.innerHTML = `
-            <div style="flex-grow:1;">
-                <span class="indice-regla" style="color:var(--oro); font-weight:bold; margin-right:8px;">${index + 1}.</span> 
-                <span ${esAdmin ? `contenteditable="true" onblur="actualizarRegla('${regla.id}', 'texto', this.innerText)"` : ''} style="outline:none;">${regla.texto}</span>
-            </div>
-            <div style="display:flex; align-items:center; gap:10px;">
-                <span style="background:rgba(255,204,0,0.2); color:var(--oro); padding:2px 8px; border-radius:5px; font-weight:bold;">
-                    +<span ${esAdmin ? `contenteditable="true" onblur="actualizarRegla('${regla.id}', 'puntos', this.innerText)"` : ''}>${regla.puntos}</span>
-                </span>
-                ${esAdmin ? `
-                    <button onclick="borrarRegla('${regla.id}')" style="color:#ff4444; background:none; border:none; cursor:pointer; font-size:1.2em;">✕</button>
-                    <div class="handle" style="cursor:grab; font-size:1.5em; color:var(--oro); margin-left:5px; padding:10px; touch-action:none;">☰</div>
-                ` : ''}
-            </div>`;
-        div.appendChild(item);
-    });
+            if (sortableInstance) sortableInstance.destroy();
 
-    // Destruimos la instancia previa si existe para evitar conflictos
-    if (sortableInstance) sortableInstance.destroy();
-
-    if (obtenerAcceso()) {
-        sortableInstance = new Sortable(div, {
-            handle: '.handle',
-            animation: 150,
-            ghostClass: 'sortable-ghost', // Clase para el efecto visual
-            forceFallback: true, // Esto ayuda mucho en móviles
-            fallbackOnBody: true,
-            onEnd: async (evt) => {
-                // Obtenemos todos los elementos en el NUEVO orden visual
-                const items = div.querySelectorAll('.regla-item');
-                const updates = {};
-                
-                items.forEach((el, index) => {
-                    const id = el.getAttribute('data-id');
-                    updates[`reglamento/${id}/orden`] = index;
+            if (obtenerAcceso()) {
+                sortableInstance = new Sortable(div, {
+                    handle: '.handle',
+                    animation: 150,
+                    ghostClass: 'sortable-ghost',
+                    forceFallback: true,
+                    fallbackOnBody: true,
+                    onEnd: async () => {
+                        const items = div.querySelectorAll('.regla-item');
+                        const updates = {};
+                        items.forEach((el, index) => {
+                            const id = el.getAttribute('data-id');
+                            updates[`reglamento/${id}/orden`] = index;
+                        });
+                        await update(ref(db), updates);
+                    }
                 });
-
-                // Mandamos la actualización masiva a Firebase
-                await update(ref(db), updates);
             }
         });
-    }
-});
 
-window.agregarReglaNueva = async () => {
-    const txt = document.getElementById('nuevo-regla-txt').value.trim();
-    const pts = document.getElementById('nuevo-regla-pts').value || 0;
-    
-    if (txt && obtenerAcceso()) {
-        const nuevoOrden = reglasCache.length > 0 ? reglasCache[reglasCache.length - 1].orden + 1 : 0;
-        await push(ref(db, 'reglamento'), { 
-            texto: txt, 
-            puntos: parseInt(pts), 
-            orden: nuevoOrden 
-        });
-        document.getElementById('nuevo-regla-txt').value = '';
-        document.getElementById('nuevo-regla-pts').value = '';
-    } else if (!obtenerAcceso()) {
-        alert("¡Epa! No tenés la clave del Dios.");
-    }
-};
+        window.agregarReglaNueva = async () => {
+            const txt = document.getElementById('nuevo-regla-txt').value.trim();
+            const pts = document.getElementById('nuevo-regla-pts').value || 0;
+            if (txt && obtenerAcceso()) {
+                const nuevoOrden = reglasCache.length > 0 ? reglasCache[reglasCache.length - 1].orden + 1 : 0;
+                await push(ref(db, 'reglamento'), { 
+                    texto: txt, 
+                    puntos: parseInt(pts), 
+                    orden: nuevoOrden 
+                });
+                document.getElementById('nuevo-regla-txt').value = '';
+                document.getElementById('nuevo-regla-pts').value = '';
+            } else if (!obtenerAcceso()) {
+                alert("¡Epa! No tenés la clave del Dios.");
+            }
+        };
 
-window.actualizarRegla = async (id, campo, valor) => {
-    if (!obtenerAcceso()) return;
-    let v = valor;
-    if (campo === 'puntos') v = parseInt(valor) || 0;
-    await update(ref(db, `reglamento/${id}`), { [campo]: v });
-};
+        window.actualizarRegla = async (id, campo, valor) => {
+            if (!obtenerAcceso()) return;
+            let v = valor;
+            if (campo === 'puntos') v = parseInt(valor) || 0;
+            await update(ref(db, `reglamento/${id}`), { [campo]: v });
+        };
 
-window.borrarRegla = async (id) => {
-    if (obtenerAcceso() && confirm("¿Eliminar esta regla?")) {
-        await set(ref(db, `reglamento/${id}`), null);
-    }
-};
+        window.borrarRegla = async (id) => {
+            if (obtenerAcceso() && confirm("¿Eliminar esta regla?")) {
+                await set(ref(db, `reglamento/${id}`), null);
+            }
+        };
 
         // --- CALENDARIO Y EVENTOS ---
         window.cambiarMes = (dir) => { fechaVisual.setMonth(fechaVisual.getMonth() + dir); renderCalendario(); };
