--- a/index.html
+++ b/index.html
@@ -286,7 +286,14 @@
             tabla.innerHTML = '';
             const lista = [];
             for (let id in data) lista.push({id, ...data[id]});
-            lista.sort((a,b) => b.puntos - a.puntos);
+           // El que tiene más puntos va abajo. 
+// Si empatan en puntos, el que tiene MENOS asistencias va arriba (va perdiendo).
+lista.sort((a, b) => {
+    if (b.puntos !== a.puntos) {
+        return b.puntos - a.puntos; // Primero por puntos (descendente)
+    }
+    return a.asistencias - b.asistencias; // Luego por asistencias (ascendente)
+});
             lista.forEach(j => {
                 const fila = document.createElement('tr');
                 fila.innerHTML = `
@@ -326,20 +333,34 @@
             renderHistorial();
         });
 
-        window.renderHistorial = () => {
-            const filtro = document.getElementById('filtro-historial').value.toLowerCase();
-            const div = document.getElementById('lista-historial');
-            div.innerHTML = '';
-            cacheHistorial.filter(h => h.jugadorNombre.toLowerCase().includes(filtro) || h.fecha.includes(filtro)).forEach(h => {
-                const color = h.diff > 0 ? "#ff4444" : "#44ff44";
-                div.innerHTML += `
-                    <div class="historial-item">
-                        <div class="fecha">${h.fecha}</div>
-                        <b>${h.jugadorNombre}</b>: <span style="color:${color}">${h.diff > 0 ? '+'+h.diff : h.diff} ${h.campo}</span>
-                        <div style="font-size:0.8em; opacity:0.7;">"${h.comentario}"</div>
-                    </div>`;
-            });
-        };
+window.renderHistorial = () => {
+    const filtro = document.getElementById('filtro-historial').value.toLowerCase();
+    const div = document.getElementById('lista-historial');
+    div.innerHTML = '';
+    
+    cacheHistorial.filter(h => 
+        h.jugadorNombre.toLowerCase().includes(filtro) || 
+        h.fecha.includes(filtro)
+    ).forEach(h => {
+        const color = h.diff > 0 ? "#44ff44" : "#ff4444"; // Verde si suma, rojo si resta
+        const signo = h.diff > 0 ? "+" : "";
+        
+        div.innerHTML += `
+            <div class="historial-item">
+                <div class="fecha">${h.fecha}</div>
+                <div style="display:flex; justify-content:space-between; align-items:center;">
+                    <span><b>${h.jugadorNombre}</b></span>
+                    <span style="color:${color}; font-weight:bold;">${signo}${h.diff} ${h.campo}</span>
+                </div>
+                <div style="font-size:0.85em; margin-top:5px; opacity:0.9;">
+                    Evolución: <span style="color:#aaa;">${h.antes}</span> ➔ <b style="color:var(--oro);">${h.ahora}</b>
+                </div>
+                <div style="font-size:0.8em; opacity:0.7; font-style:italic; margin-top:3px;">
+                    "${h.comentario}"
+                </div>
+            </div>`;
+    });
+};
 
         // --- REGLAMENTO ---
 // --- REGLAMENTO (CORREGIDO) ---
