--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <button id="btn-ver-historial-ev" class="btn-puntos">📊 Ver Puntos</button>
             
             <button id="btn-google-cal" class="btn-puntos" style="background: #4285F4; color: white; border: none;">
-                📅 Agendar en Google
+                📅 Apretame Toly (google calendar)
             </button>
 
             <label class="btn-subir">
