--- a/index.html
+++ b/index.html
@@ -553,38 +553,44 @@ window.crearEvento = async () => {
             }
         };
 
-window.subirFotoDirecta = () => {
+window.subirFotoDirecta = async () => {
     const file = document.getElementById('input-foto').files[0];
+    const apiKey = '2791ae5e35dca772d137a09c367832ff'; // <-- PONÉ TU CLAVE ACÁ
+    
     if (!file || !eventoSeleccionadoId) return;
 
-    const reader = new FileReader();
-    reader.onload = (e) => {
-        const img = new Image();
-        img.onload = () => {
-            const canvas = document.createElement('canvas');
-            const MAX_WIDTH = 800; 
-            let width = img.width;
-            let height = img.height;
+    // Mostrar un "cargando" sencillo
+    const btn = document.querySelector('.btn-subir');
+    const textoOriginal = btn.innerHTML;
+    btn.innerHTML = "⏳ Subiendo...";
+    btn.style.opacity = "0.5";
 
-            if (width > height) {
-                if (width > MAX_WIDTH) { height *= MAX_WIDTH / width; width = MAX_WIDTH; }
-            } else {
-                if (height > MAX_WIDTH) { width *= MAX_WIDTH / height; height = MAX_WIDTH; }
-            }
+    const formData = new FormData();
+    formData.append('image', file);
 
-            canvas.width = width;
-            canvas.height = height;
-            const ctx = canvas.getContext('2d');
-            ctx.drawImage(img, 0, 0, width, height);
+    try {
+        const response = await fetch(`https://api.imgbb.com/1/upload?key=${apiKey}`, {
+            method: 'POST',
+            body: formData
+        });
 
-            // Comprimimos a JPEG calidad 0.6 (se ve joya y vuela)
-            const dataUrl = canvas.toDataURL('image/jpeg', 0.6);
-            push(ref(db, `fotos/${eventoSeleccionadoId}`), dataUrl);
-            alert("✅ Foto optimizada y subida!");
-        };
-        img.src = e.target.result;
-    };
-    reader.readAsDataURL(file);
+        const data = await response.json();
+
+        if (data.success) {
+            // Guardamos solo el LINK en Firebase, mucho más liviano
+            const urlImagen = data.data.display_url;
+            await push(ref(db, `fotos/${eventoSeleccionadoId}`), urlImagen);
+            alert("✅ ¡Foto subida con éxito!");
+        } else {
+            alert("Error al subir a ImgBB");
+        }
+    } catch (error) {
+        console.error(error);
+        alert("Error de conexión");
+    } finally {
+        btn.innerHTML = textoOriginal;
+        btn.style.opacity = "1";
+    }
 };
 
 function cargarFotos(evId) {
