--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ window.validarYGuardarClave = () => {
         habilitarEdicion(); 
         
         // Y esto recarga la tabla y eventos para que aparezcan los botones 💾 y 🗑️
-        alert("Acceso concedido Pipon!. Cargando herramientas de Etherian...");
+        alert("Listo Papilo!, Cargando herramientas de Etherian...");
         location.reload(); 
 
     } else {
